Removed logo link in footer

--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -242,7 +242,7 @@
                         <div class="single-footer-caption mb-30">
                             <!-- logo -->
                             <div class="footer-logo">
-                                <a href="index.html"><img src="/assets/img/logo/fivestar.jpg" alt=""></a>
+                                <a><img src="/assets/img/logo/fivestar.jpg" alt=""></a>
                             </div>
                             <div class="footer-social footer-social2">
                                 <a href="#"><i class="fab fa-facebook-f"></i></a>
